[tool.poetry]
name = "changemon"
version = "0.1.0"
description = "Fetches appinfo from Steam from WebSocket notices."
authors = ["Lars Viklund <zao@zao.se>"]

[tool.poetry.dependencies]
python = "^3.10"
steam = {extras = ["client"], version = "^1.3.0"}
pydantic = "^1.9.1"
websockets = "^10.3"
asyncio-gevent = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
changemon = "changemon.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
